filter search added

--- a/employee_apps/templates/product-list.html
+++ b/employee_apps/templates/product-list.html
@@ -4,6 +4,54 @@
     <h1 class="text-decoration-underline">Product List</h1> <hr>
     <a href="/product-add" class="btn btn-success">Add New Product</a>
     <a href="/product-excel-export" class="btn btn-info">Excel</a>
+
+    <!-- <form
+        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <div class="input-group">
+            <input type="text" name="search" class="form-control bg-light border-0 small" placeholder="Search Product"
+                aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-search fa-sm"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+    <form
+        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <div class="input-group">
+            <input type="text" name="search" class="form-control bg-light border-0 small" placeholder="Search for..."
+                aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-search fa-sm"></i>
+                </button>
+            </div>
+        </div>
+    </form> -->
+    
+    <form class="form-inline">
+    <select name="category" class="form-control mr-sm-2">
+        <option value="">All Categories</option>
+            {% for category in categories %}
+                <option value="{{ category.id }}" {% if category.id == selected_category %}selected{% endif %}>
+                    {{ category.category_name }}
+                </option>
+            {% endfor %}
+      </select>
+      <select name="brand" class="form-control mr-sm-2">
+            <option value="">All Brands</option>
+            {% for brand in brands %}
+                <option value="{{ brand.id }}" {% if brand.id == selected_brand %}selected{% endif %}>
+                    {{ brand.brand_name }}
+                </option>
+            {% endfor %}
+      </select>
+        <!-- <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search" value="{{ search_query }}"> -->
+        <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+
     <div class="row mt-3">
         <table class="table">
             <thead>
@@ -14,6 +62,7 @@
                 <th scope="col">Sales Price</th>
                 <th scope="col">Category</th>
                 <th scope="col">Qty</th>
+                <th scope="col">Brand</th>
                 <th scope="col" style="width: 180px;">Action</th>
                 </tr>
             </thead>
@@ -32,6 +81,7 @@
                     <td>{{ obj.stock_qty }}
                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#qtyModal" onclick="productQty('{{ obj.id }}')" style="font-size: x-small;" >Add</button>
                     </td>
+                    <td>{{ obj.brand.brand_name }}</td>
                     <td>
                         <a href="/product-details/{{obj.id}}" class="btn btn-info btn-sm" style="font-size: small;"><i class="fas fa-eye"></i></a>
                         <a href="/product-edit/{{ obj.id }}" class="btn btn-warning btn-sm" style="font-size: small;"><i class="fas fa-edit"></i></a>
