--- a/employee_apps/templates/color-list.html
+++ b/employee_apps/templates/color-list.html
@@ -4,6 +4,20 @@
     <h1>Color List</h1>
     <a href="/color-add" class="btn btn-success">Add New Color</a>
     <a href="/color-list-excel-export" class="btn btn-info">Excel</a>
+    
+    <form
+        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+        <div class="input-group">
+            <input type="text" name="search" class="form-control bg-light border-0 small" placeholder="Search category"
+                aria-label="Search" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-search fa-sm"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+
     <div class="row">
         <table class="table">
             <thead>
