--- a/employee_apps/templates/product-list.html
+++ b/employee_apps/templates/product-list.html
@@ -4,6 +4,7 @@
     <h1 class="text-decoration-underline">Product List</h1> <hr>
     <a href="/product-add" class="btn btn-success">Add New Product</a>
     <a href="/product-excel-export" class="btn btn-info">Excel</a>
+    <a href="/product-pdf-export" class="btn btn-info">PDF</a>
 
     <!-- <form
         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
