edu departpemnt add

--- a/employee_apps/templates/base.html
+++ b/employee_apps/templates/base.html
@@ -93,6 +93,22 @@
             </li>
 
             
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#student"
+                    aria-expanded="true" aria-controls="student">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Student</span>
+                </a>
+                <div id="student" class="collapse" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/edu-department-list">Department List</a>
+                        <a class="collapse-item" href="/">Teacher List</a>
+                        <a class="collapse-item" href="/">Student List</a>
+                    </div>
+                </div>
+            </li>
+
+            
 
             
 
