inventory feature doc file update

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -35,7 +35,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">ADMIN | EMPLOYEE</div>
+                <div class="sidebar-brand-text mx-3">ADMIN | BUSINESS</div>
             </a>
 
             <!-- Divider -->
@@ -73,37 +73,19 @@
                     </div>
                 </div>
             </li>
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#product"
-                    aria-expanded="true" aria-controls="product">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Product</span>
-                </a>
-                <div id="product" class="collapse" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/product-list">Product List</a>
-                        <a class="collapse-item" href="/category-list">Category List</a>
-                        <a class="collapse-item" href="/brand-list">Brand List</a>
-                        <a class="collapse-item" href="/size-list">Size List</a>
-                        <a class="collapse-item" href="/color-list">Color List</a>
-                        <a class="collapse-item" href="/unit-list">Unit List</a>
-                    </div>
-                </div>
-            </li>
-
             
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#student"
                     aria-expanded="true" aria-controls="student">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Student</span>
+                    <span>Essentials</span>
                 </a>
                 <div id="student" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/edu-department-list">Department List</a>
-                        <a class="collapse-item" href="/">Teacher List</a>
-                        <a class="collapse-item" href="/">Student List</a>
+                        <a class="collapse-item" href="/edu-department-list">Customer List</a>
+                        <a class="collapse-item" href="/edu-department-list">Expense Category List</a>
+                        <a class="collapse-item" href="/">Bank List</a>
+                        <a class="collapse-item" href="/">Supplier List</a>
                     </div>
                 </div>
             </li>
