customer model, customer add urls, views, html, customer list urls views, html

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ADMIN | Employee</title>
+    <title>ADMIN | BUSINESS</title>
 
     <!-- Custom fonts for this template-->
     <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -59,33 +59,91 @@
 
             <!-- Employee Module -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#employee"
-                    aria-expanded="true" aria-controls="employee">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#sales"
+                    aria-expanded="true" aria-controls="sales">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Employee</span>
+                    <span>Sales</span>
                 </a>
-                <div id="employee" class="collapse" data-parent="#accordionSidebar">
+                <div id="sales" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/employee-add" >Add Employee</a>
-                        <a class="collapse-item" href="/employee-list">Employee List</a>
-                        <a class="collapse-item" href="/department-add">Add Department</a>
-                        <a class="collapse-item" href="/department-list">Department List</a>
+                        <a class="collapse-item" href="/" >Create Sales</a>
+                        <a class="collapse-item" href="/">Sales Order List</a>
+                        <a class="collapse-item" href="/">Payment Receive</a>
+                        <a class="collapse-item" href="/">Payment Receive List</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#daily_reports"
+                    aria-expanded="true" aria-controls="daily_reports">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Daily Reports</span>
+                </a>
+                <div id="daily_reports" class="collapse" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/" >Daily Sales Report</a>
+                        <a class="collapse-item" href="/">Daily Expense Report</a>
+                        <a class="collapse-item" href="/">Daily Payment Receive Report</a>
+                        <a class="collapse-item" href="/">Daily Cash Summery</a>
+                        <a class="collapse-item" href="/">Daily Purchase Report</a>
+                        <a class="collapse-item" href="/">Daily Supplier Payment Report</a>
+                        <a class="collapse-item" href="/">Daily Customer Due Report</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#monthly_reports"
+                    aria-expanded="true" aria-controls="monthly_reports">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Monthly Reports</span>
+                </a>
+                <div id="monthly_reports" class="collapse" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/" >Monthly Sales Report</a>
+                        <a class="collapse-item" href="/">Monthly Expense Report</a>
+                        <a class="collapse-item" href="/">Monthly Payment Receive Report</a>
+                        <a class="collapse-item" href="/">Monthly Cash Summery</a>
+                        <a class="collapse-item" href="/">Monthly Purchase Report</a>
+                        <a class="collapse-item" href="/">Monthly Supplier Payment Report</a>
+                        <a class="collapse-item" href="/">Monthly Customer Due Report</a>
                     </div>
                 </div>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#student"
-                    aria-expanded="true" aria-controls="student">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#customers"
+                    aria-expanded="true" aria-controls="customers">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Customer</span>
+                </a>
+                <div id="customers" class="collapse" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/inv/customer-add">Add Customer</a>
+                        <a class="collapse-item" href="/inv/customer-list">Customer List</a>
+                        <a class="collapse-item" href="/">Customer Payment Report</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#essentials"
+                    aria-expanded="true" aria-controls="essentials">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Essentials</span>
                 </a>
-                <div id="student" class="collapse" data-parent="#accordionSidebar">
+                <div id="essentials" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/edu-department-list">Customer List</a>
-                        <a class="collapse-item" href="/edu-department-list">Expense Category List</a>
+                        <a class="collapse-item" href="/">Add Customer</a>
+                        <a class="collapse-item" href="/">Customer List</a>
+                        <a class="collapse-item" href="/">Add Expense Category</a>
+                        <a class="collapse-item" href="/">Expense Category List</a>
+                        <a class="collapse-item" href="/">Add Bank</a>
                         <a class="collapse-item" href="/">Bank List</a>
+                        <a class="collapse-item" href="/">Add Supplier</a>
                         <a class="collapse-item" href="/">Supplier List</a>
+                        <a class="collapse-item" href="/">Add Area</a>
+                        <a class="collapse-item" href="/">Area List</a>
                     </div>
                 </div>
             </li>
