--- a/inventory/templates/inventory/customer-list.html
+++ b/inventory/templates/inventory/customer-list.html
@@ -1,6 +1,7 @@
 {% extends 'inventory/base.html' %}
 {% block content %}
 <div class="container">
+    <a href="/inv/customer-add" class="btn btn-success btn-sm">Add New Customer</a>
     <div class="row">
         <table class="table">
         <thead>
@@ -21,8 +22,8 @@
                     <td>{{ customer.customer_email }}</td>
                     <td>
                         <a href="" class="btn btn-success btn-sm"><i class="fas fa-eye"></i></a>
-                        <a href="" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
-                        <a href="" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
+                        <a href="/inv/customer-edit/{{ customer.id }}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
+                        <a href="/inv/customer-delete/{{ customer.id }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                     </td>
                 </tr>
             {% endfor %}
