--- a/inventory/templates/inventory/customer-list.html
+++ b/inventory/templates/inventory/customer-list.html
@@ -21,7 +21,7 @@
                     <td>{{ customer.customer_phone }}</td>
                     <td>{{ customer.customer_email }}</td>
                     <td>
-                        <a href="" class="btn btn-success btn-sm"><i class="fas fa-eye"></i></a>
+                        <a href="/inv/customer-details/{{ customer.id }}" class="btn btn-success btn-sm"><i class="fas fa-eye"></i></a>
                         <a href="/inv/customer-edit/{{ customer.id }}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
                         <a href="/inv/customer-delete/{{ customer.id }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                     </td>
