expense category add/edit/delete/list

--- a/employee_apps/templates/base.html
+++ b/employee_apps/templates/base.html
@@ -108,6 +108,14 @@
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/inv">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Inventory</span>
+                </a>
+                
+            </li>
+
             
 
             
