--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -134,7 +134,7 @@
                 </a>
                 <div id="essentials" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/">Add Expense Category</a>
+                        <a class="collapse-item" href="/inv/expense-category-add">Add Expense Category</a>
                         <a class="collapse-item" href="/">Expense Category List</a>
                         <a class="collapse-item" href="/">Add Bank</a>
                         <a class="collapse-item" href="/">Bank List</a>
