--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -135,9 +135,9 @@
                 <div id="essentials" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="/inv/expense-category-add">Add Expense Category</a>
-                        <a class="collapse-item" href="/">Expense Category List</a>
-                        <a class="collapse-item" href="/">Add Bank</a>
-                        <a class="collapse-item" href="/">Bank List</a>
+                        <a class="collapse-item" href="/inv/expense-category-list">Expense Category List</a>
+                        <a class="collapse-item" href="/inv/bank-add">Add Bank</a>
+                        <a class="collapse-item" href="/inv/bank-list">Bank List</a>
                         <a class="collapse-item" href="/">Add Supplier</a>
                         <a class="collapse-item" href="/">Supplier List</a>
                         <a class="collapse-item" href="/">Add Area</a>
