Supplier Add & List

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -138,8 +138,8 @@
                         <a class="collapse-item" href="/inv/expense-category-list">Expense Category List</a>
                         <a class="collapse-item" href="/inv/bank-add">Add Bank</a>
                         <a class="collapse-item" href="/inv/bank-list">Bank List</a>
-                        <a class="collapse-item" href="/">Add Supplier</a>
-                        <a class="collapse-item" href="/">Supplier List</a>
+                        <a class="collapse-item" href="/inv/supplier-add">Add Supplier</a>
+                        <a class="collapse-item" href="/inv/supplier-list">Supplier List</a>
                         <a class="collapse-item" href="/">Add Area</a>
                         <a class="collapse-item" href="/">Area List</a>
                     </div>
