supplier edit/delete

--- a/inventory/templates/inventory/supplier-list.html
+++ b/inventory/templates/inventory/supplier-list.html
@@ -1,7 +1,7 @@
 {% extends 'inventory/base.html' %}
 {% block content %}
 <div class="container">
-    <a href="/inv/bank-add" class="btn btn-success btn-sm">Add New Bank</a>
+    <a href="/inv/supplier-add" class="btn btn-success btn-sm">Add New Supplier</a>
     <div class="row">
         <table class="table">
         <thead>
