Supplier Details & Area Models

--- a/inventory/templates/inventory/supplier-list.html
+++ b/inventory/templates/inventory/supplier-list.html
@@ -21,6 +21,7 @@
                     <td>{{ supplier.supplier_phone }}</td>
                     <td>{{ supplier.supplier_email }}</td>
                     <td>
+                        <a href="/inv/supplier-details/{{ supplier.id }}" class="btn btn-success btn-sm"><i class="fas fa-eye"></i></a>
                         <a href="/inv/supplier-edit/{{ supplier.id }}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
                         <a href="/inv/supplier-delete/{{ supplier.id }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                     </td>
