--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -140,8 +140,8 @@
                         <a class="collapse-item" href="/inv/bank-list">Bank List</a>
                         <a class="collapse-item" href="/inv/supplier-add">Add Supplier</a>
                         <a class="collapse-item" href="/inv/supplier-list">Supplier List</a>
-                        <a class="collapse-item" href="/">Add Area</a>
-                        <a class="collapse-item" href="/">Area List</a>
+                        <a class="collapse-item" href="/inv/area-add">Add Area</a>
+                        <a class="collapse-item" href="/inv/area-list">Area List</a>
                     </div>
                 </div>
             </li>
