division, district, thana add, edit,delete.list

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -142,6 +142,12 @@
                         <a class="collapse-item" href="/inv/supplier-list">Supplier List</a>
                         <a class="collapse-item" href="/inv/area-add">Add Area</a>
                         <a class="collapse-item" href="/inv/area-list">Area List</a>
+                        <a class="collapse-item" href="/inv/division-add">Add Division</a>
+                        <a class="collapse-item" href="/inv/division-list">Division List</a>
+                        <a class="collapse-item" href="/inv/district-add">Add District</a>
+                        <a class="collapse-item" href="/inv/district-list">District List</a>
+                        <a class="collapse-item" href="/inv/thana-add">Add Thana</a>
+                        <a class="collapse-item" href="/inv/thana-list">Thana List</a>
                     </div>
                 </div>
             </li>
