customer update, thana edit, delete

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -9,6 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+
+
+
+
+
+
+
     <title>ADMIN | BUSINESS</title>
 
     <!-- Custom fonts for this template-->
