--- a/inventory/templates/inventory/customer-details.html
+++ b/inventory/templates/inventory/customer-details.html
@@ -20,6 +20,18 @@
                 <td>{{ customer_details.customer_email }}</td>
             </tr>
             <tr>
+                <th>Division</th>
+                <td>{{ customer_details.division.division }}</td>
+            </tr>
+            <tr>
+                <th>District</th>
+                <td>{{ customer_details.district.district_name }}</td>
+            </tr>
+            <tr>
+                <th>Thana</th>
+                <td>{{ customer_details.thana.thana_name }}</td>
+            </tr>
+            <tr>
                 <th>Customer Address</th>
                 <td>{{ customer_details.customer_address }}</td>
             </tr>
