--- a/inventory/templates/inventory/district-list.html
+++ b/inventory/templates/inventory/district-list.html
@@ -17,8 +17,8 @@
                     <th scope="row">{{ forloop.counter }}</th>
                     <td>{{ obj.district_name }}</td>
                     <td>
-                        <a href="/inv/division-edit/{{ obj.id }}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
-                        <a href="/inv/division-delete/{{ obj.id }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
+                        <a href="/inv/district-edit/{{ obj.id }}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
+                        <a href="/inv/district-delete/{{ obj.id }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                     </td>
                 </tr>
             {% endfor %}
