--- a/inventory/templates/inventory/thana-add.html
+++ b/inventory/templates/inventory/thana-add.html
@@ -31,5 +31,19 @@
             </div>
         </div>
     </form>
+
+    <button type="button" id="alert-button">Click me</button>
 </div>
+
+
+<script>
+  $(document).ready(function() {
+    $('#alert-button').click(function() {
+      alert('Hello world!');
+    });
+  });
+</script>
+
+
+
 {% endblock %}
